# Proyecto-Programacion-III

./: ALL.h  CMakeLists.txt  MovieSearch.cpp  MovieSearch.h  Pelicula.cpp  Pelicula.h  README.md  bd.cpp  bd.h  buscador.cpp  buscador.h  busqueda.cpp  cleanData.cpp  cleanData.h  h.cpp  librerias.h  main.cpp  utilidades.cpp  utilidades.h
logOrRegis/: Planes.cpp  Planes.h  Usuario.cpp  Usuario.h
pruebas/: CMakeLists.txt  MovieSearch.cpp  MovieSearch.h  prueba.csv  prueba1.cpp  prueba2.cpp  prueba3.cpp  prueba4.cpp
src/: Pelicula.h  bd.cpp  bd.h  buscador.cpp  buscador.h  utilidades.h
web/: browse.css  browse.html  browse.js  index.html  later.css  later.html  later.js  liked.html  liked.js  script.js  styles.css
web/auth/: login.css  login.html  login.js  register.css  register.html  register.js
web/navBar/: NavBar.css  NavBar.html  NavBar.js
